# ReadyOrNot-FENTRY

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Libraries/ImGui/: imgui_draw.cpp
Libraries/ImGui/impls/windows/: imgui_impl_win32.cpp
Libraries/RendererHook/: Config.h  Fonts.h  OverlayBase.cpp  OverlayBase.h  RendererDetector.cpp  imgui_custom.cpp  imgui_custom.h
Libraries/RendererHook/Windows/: DX10Hook.cpp  DX11Hook.cpp  DX12Hook.cpp  DX12Hook.h  DX9Hook.cpp  OpenGLHook.cpp  WindowsHook.cpp
OHook/: dllmain.cpp
OHook/Core/: Configuration.cpp  Configuration.h  DetourManager.cpp  DetourManager.h  LocalizationManager.cpp  LocalizationManager.h
OHook/Features/: AimFeatures.cpp  AimFeatures.h  PlayerFeatures.cpp  PlayerFeatures.h  WorldFeatures.cpp  WorldFeatures.h
OHook/Handlers/: ActorCache.cpp  ActorCache.h
OHook/Misc/: ImGuiExt.cpp  ImGuiExt.h  ImGuiNotify.hpp  SDKExt.h  Utils.h  includes.h
OHook/Overlays/: ESP.cpp  ESP.h  ReadyornotOverlay.cpp  ReadyornotOverlay.h
OHook/Overlays/Modules/: ESP_VisualSettings.h  Fentry_Settings.h  Player_ModSettings.h  Weapon_ModSettings.h  World_ModSettings.h
ReadyornotSDK/: README.md
console/: console.cpp  console.hpp
languages/: en.h  es.h  pt.h  zh.h
